--- a/index.html
+++ b/index.html
@@ -588,6 +588,13 @@
             <use href="./images/icons.svg#ui-close"></use>
           </svg>
         </button>
+        <strong>Leave your contacts and we will call you back</strong>
+        <form name="signup_form" autocomplete="on">
+          <label for="user_name">Name</label>
+          <div>
+            <input type="text" name="in_name" id="user_name" />
+          </div>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
