--- a/index.html
+++ b/index.html
@@ -593,6 +593,9 @@
           <label for="user_name">Name</label>
           <div>
             <input type="text" name="in_name" id="user_name" />
+            <svg class="socials-icon" width="18" height="18">
+              <use href="./images/icons.svg#ui-person"></use>
+            </svg>
           </div>
         </form>
       </div>
