--- a/index.html
+++ b/index.html
@@ -588,15 +588,87 @@
             <use href="./images/icons.svg#ui-close"></use>
           </svg>
         </button>
-        <strong>Leave your contacts and we will call you back</strong>
-        <form name="signup_form" autocomplete="on">
-          <label for="user_name">Name</label>
-          <div>
-            <input type="text" name="in_name" id="user_name" />
-            <svg class="socials-icon" width="18" height="18">
+        <strong class="modal-title"
+          >Leave your contacts and we will call you back</strong
+        >
+        <form class="modal-form" name="signup_form" autocomplete="on">
+          <label class="modal-form-label" for="user_name">Name</label>
+          <div class="modal-form-field">
+            <input
+              class="modal-form-input"
+              type="text"
+              name="user_name"
+              id="user_name"
+              required
+              minlength="2"
+            />
+            <svg class="modal-form-icon" width="18" height="18">
               <use href="./images/icons.svg#ui-person"></use>
             </svg>
           </div>
+          <label class="modal-form-label" for="user_phone">Phone</label>
+          <div class="modal-form-field">
+            <input
+              class="modal-form-input"
+              type="tel"
+              name="user_phone"
+              id="user_phone"
+              required
+              minlength="12"
+              maxlength="12"
+            />
+            <svg class="modal-form-icon" width="18" height="24">
+              <use href="./images/icons.svg#ui-phone"></use>
+            </svg>
+          </div>
+          <label class="modal-form-label" for="user_email">Email</label>
+          <div class="modal-form-field">
+            <input
+              class="modal-form-input"
+              type="email"
+              name="user_email"
+              id="user_email"
+              required
+              pattern="^(?=.*[a-z])(?=.*[A-Z])"
+              title="Please use Latin characters."
+            />
+            <svg class="modal-form-icon" width="18" height="24">
+              <use href="./images/icons.svg#ui-email"></use>
+            </svg>
+          </div>
+          <label class="modal-form-label" for="user_message">Comment</label>
+          <textarea
+            class="modal-form-message"
+            name="user_message"
+            id="user_message"
+            rows="5"
+            placeholder="Text input"
+          ></textarea>
+          <label class="modal-form-agreement">
+            <input
+              class="modal-form-agreement-box"
+              type="checkbox"
+              name="user_agreement"
+              id="user_agreement"
+            />
+            <svg class="modal-form-agreement-icon" width="18" height="18">
+              <use
+                class="modal-form-agreement-unchecked"
+                href="./images/icons.svg#ui-unchecked"
+              ></use>
+              <use
+                class="modal-form-agreement-checked"
+                href="./images/icons.svg#ui-checked"
+              ></use>
+            </svg>
+            <span class="modal-form-agreement-text"
+              >I accept the terms and conditions of the
+              <a class="modal-form-agreement-link" href=""
+                >Privacy Policy</a
+              ></span
+            >
+          </label>
+          <button class="modal-btn btn" type="submit">Send</button>
         </form>
       </div>
     </div>
