--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div class="footer-item">
+        <div class="footer-item footer-item-socials">
           <p class="footer-item-titel">Social media</p>
           <ul class="socials list socials-footer">
             <li class="socials-item">
@@ -578,12 +578,34 @@
             </li>
           </ul>
         </div>
+        <div class="footer-item">
+          <p class="footer-item-titel">Subscribe</p>
+          <form class="footer-subscribe-form" name="subscribe_form">
+            <label class="footer-subscribe-label" for="subscribe_email">
+              <input
+                class="footer-subscribe-input"
+                type="email"
+                name="subscribe_email"
+                id="subscribe_email"
+                placeholder="E-mail"
+                pattern="^(?=.*[a-z])(?=.*[A-Z])"
+                title="Please use Latin characters."
+              />
+            </label>
+            <button class="footer-subscribe-btn btn" type="submit">
+              Subscribe
+              <svg class="socials-icon" width="24" height="24">
+                <use href="./images/icons.svg#ui-subscribe"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <!-- Modal window -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button class="modal-btn" type="button" data-modal-close>
+        <button class="modal-close-btn" type="button" data-modal-close>
           <svg class="modal-icon" width="8" height="8">
             <use href="./images/icons.svg#ui-close"></use>
           </svg>
@@ -651,7 +673,7 @@
               name="user_agreement"
               id="user_agreement"
             />
-            <svg class="modal-form-agreement-icon" width="18" height="18">
+            <svg class="modal-form-agreement-icon" width="16" height="16">
               <use
                 class="modal-form-agreement-unchecked"
                 href="./images/icons.svg#ui-unchecked"
