--- a/portfolio.html
+++ b/portfolio.html
@@ -290,7 +290,7 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div class="footer-item">
+        <div class="footer-item footer-item-socials">
           <p class="footer-item-titel">Social media</p>
           <ul class="socials list socials-footer">
             <li class="socials-item">
@@ -346,6 +346,28 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="footer-item">
+          <p class="footer-item-titel">Subscribe</p>
+          <form class="footer-subscribe-form" name="subscribe_form">
+            <label class="footer-subscribe-label" for="subscribe_email">
+              <input
+                class="footer-subscribe-input"
+                type="email"
+                name="subscribe_email"
+                id="subscribe_email"
+                placeholder="E-mail"
+                pattern="^(?=.*[a-z])(?=.*[A-Z])"
+                title="Please use Latin characters."
+              />
+            </label>
+            <button class="footer-subscribe-btn btn" type="submit">
+              Subscribe
+              <svg class="socials-icon" width="24" height="24">
+                <use href="./images/icons.svg#ui-subscribe"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
