--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
               <input
                 class="footer-subscribe-input"
                 type="email"
-                name="subscribe_email"
+                name="subscribe-email"
                 id="subscribe_email"
                 placeholder="E-mail"
                 pattern="^(?=.*[a-z])(?=.*[A-Z])"
@@ -594,7 +594,11 @@
             </label>
             <button class="footer-subscribe-btn btn" type="submit">
               Subscribe
-              <svg class="socials-icon" width="24" height="24">
+              <svg
+                class="socials-icon footer-subscribe-icon"
+                width="24"
+                height="24"
+              >
                 <use href="./images/icons.svg#ui-subscribe"></use>
               </svg>
             </button>
