--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
             <input
               class="modal-form-input"
               type="text"
-              name="user_name"
+              name="user-name"
               id="user_name"
               required
               minlength="2"
@@ -637,7 +637,7 @@
             <input
               class="modal-form-input"
               type="tel"
-              name="user_phone"
+              name="user-phone"
               id="user_phone"
               required
               minlength="12"
@@ -652,7 +652,7 @@
             <input
               class="modal-form-input"
               type="email"
-              name="user_email"
+              name="user-email"
               id="user_email"
               required
               pattern="^(?=.*[a-z])(?=.*[A-Z])"
@@ -665,7 +665,7 @@
           <label class="modal-form-label" for="user_message">Comment</label>
           <textarea
             class="modal-form-message"
-            name="user_message"
+            name="user-message"
             id="user_message"
             rows="5"
             placeholder="Text input"
@@ -674,7 +674,7 @@
             <input
               class="modal-form-agreement-box"
               type="checkbox"
-              name="user_agreement"
+              name="user-agreement"
               id="user_agreement"
             />
             <svg class="modal-form-agreement-icon" width="16" height="16">
