--- a/index.html
+++ b/index.html
@@ -614,9 +614,7 @@
             <use href="./images/icons.svg#ui-close"></use>
           </svg>
         </button>
-        <strong class="modal-title"
-          >Leave your contacts and we will call you back</strong
-        >
+        <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form" name="signup_form" autocomplete="on">
           <label class="modal-form-label" for="user_name">Name</label>
           <div class="modal-form-field">
