--- a/index.html
+++ b/index.html
@@ -616,83 +616,85 @@
         </button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form" name="signup_form" autocomplete="on">
-          <label class="modal-form-label" for="user_name">Name</label>
-          <div class="modal-form-field">
-            <input
-              class="modal-form-input"
-              type="text"
-              name="user-name"
-              id="user_name"
-              required
-              minlength="2"
-            />
-            <svg class="modal-form-icon" width="18" height="18">
-              <use href="./images/icons.svg#ui-person"></use>
-            </svg>
+          <div class="modal-form-wrap">
+            <label class="modal-form-label" for="user-name">Name</label>
+            <div class="modal-form-field">
+              <input
+                class="modal-form-input"
+                type="text"
+                name="user-name"
+                id="user-name"
+                required
+                minlength="2"
+              />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#ui-person"></use>
+              </svg>
+            </div>
+            <label class="modal-form-label" for="user-phone">Phone</label>
+            <div class="modal-form-field">
+              <input
+                class="modal-form-input"
+                type="tel"
+                name="user-phone"
+                id="user-phone"
+                required
+                minlength="12"
+                maxlength="12"
+              />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#ui-phone"></use>
+              </svg>
+            </div>
+            <label class="modal-form-label" for="user-email">Email</label>
+            <div class="modal-form-field">
+              <input
+                class="modal-form-input"
+                type="email"
+                name="user-email"
+                id="user-email"
+                required
+                pattern="^(?=.*[a-z])(?=.*[A-Z])"
+                title="Please use Latin characters."
+              />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#ui-email"></use>
+              </svg>
+            </div>
+            <label class="modal-form-label" for="user-comment">Comment</label>
+            <textarea
+              class="modal-form-message"
+              name="user-comment"
+              id="user-comment"
+              rows="5"
+              placeholder="Text input"
+            ></textarea>
+            <label class="modal-form-agreement">
+              <input
+                class="modal-form-agreement-box"
+                type="checkbox"
+                name="user-agreement"
+                id="user-agreement"
+              />
+              <svg class="modal-form-agreement-icon" width="16" height="16">
+                <use
+                  class="modal-form-agreement-unchecked"
+                  href="./images/icons.svg#ui-unchecked"
+                ></use>
+                <use
+                  class="modal-form-agreement-checked"
+                  href="./images/icons.svg#ui-checked"
+                ></use>
+              </svg>
+              <span class="modal-form-agreement-text"
+                >I accept the terms and conditions of the
+                <a class="modal-form-agreement-link" href=""
+                  >Privacy Policy</a
+                ></span
+              >
+            </label>
+            <button class="modal-btn btn" type="submit">Send</button>
           </div>
-          <label class="modal-form-label" for="user_phone">Phone</label>
-          <div class="modal-form-field">
-            <input
-              class="modal-form-input"
-              type="tel"
-              name="user-phone"
-              id="user_phone"
-              required
-              minlength="12"
-              maxlength="12"
-            />
-            <svg class="modal-form-icon" width="18" height="24">
-              <use href="./images/icons.svg#ui-phone"></use>
-            </svg>
-          </div>
-          <label class="modal-form-label" for="user_email">Email</label>
-          <div class="modal-form-field">
-            <input
-              class="modal-form-input"
-              type="email"
-              name="user-email"
-              id="user_email"
-              required
-              pattern="^(?=.*[a-z])(?=.*[A-Z])"
-              title="Please use Latin characters."
-            />
-            <svg class="modal-form-icon" width="18" height="24">
-              <use href="./images/icons.svg#ui-email"></use>
-            </svg>
-          </div>
-          <label class="modal-form-label" for="user_message">Comment</label>
-          <textarea
-            class="modal-form-message"
-            name="user-message"
-            id="user_message"
-            rows="5"
-            placeholder="Text input"
-          ></textarea>
-          <label class="modal-form-agreement">
-            <input
-              class="modal-form-agreement-box"
-              type="checkbox"
-              name="user-agreement"
-              id="user_agreement"
-            />
-            <svg class="modal-form-agreement-icon" width="16" height="16">
-              <use
-                class="modal-form-agreement-unchecked"
-                href="./images/icons.svg#ui-unchecked"
-              ></use>
-              <use
-                class="modal-form-agreement-checked"
-                href="./images/icons.svg#ui-checked"
-              ></use>
-            </svg>
-            <span class="modal-form-agreement-text"
-              >I accept the terms and conditions of the
-              <a class="modal-form-agreement-link" href=""
-                >Privacy Policy</a
-              ></span
-            >
-          </label>
-          <button class="modal-btn btn" type="submit">Send</button>
         </form>
       </div>
     </div>
