--- a/index.html
+++ b/index.html
@@ -631,6 +631,8 @@
                 <use href="./images/icons.svg#ui-person"></use>
               </svg>
             </div>
+          </div>
+          <div class="modal-form-wrap">
             <label class="modal-form-label" for="user-phone">Phone</label>
             <div class="modal-form-field">
               <input
@@ -646,6 +648,8 @@
                 <use href="./images/icons.svg#ui-phone"></use>
               </svg>
             </div>
+          </div>
+          <div class="modal-form-wrap">
             <label class="modal-form-label" for="user-email">Email</label>
             <div class="modal-form-field">
               <input
@@ -661,6 +665,8 @@
                 <use href="./images/icons.svg#ui-email"></use>
               </svg>
             </div>
+          </div>
+          <div class="modal-form-wrap">
             <label class="modal-form-label" for="user-comment">Comment</label>
             <textarea
               class="modal-form-message"
@@ -669,32 +675,32 @@
               rows="5"
               placeholder="Text input"
             ></textarea>
-            <label class="modal-form-agreement">
-              <input
-                class="modal-form-agreement-box"
-                type="checkbox"
-                name="user-agreement"
-                id="user-agreement"
-              />
-              <svg class="modal-form-agreement-icon" width="16" height="16">
-                <use
-                  class="modal-form-agreement-unchecked"
-                  href="./images/icons.svg#ui-unchecked"
-                ></use>
-                <use
-                  class="modal-form-agreement-checked"
-                  href="./images/icons.svg#ui-checked"
-                ></use>
-              </svg>
-              <span class="modal-form-agreement-text"
-                >I accept the terms and conditions of the
-                <a class="modal-form-agreement-link" href=""
-                  >Privacy Policy</a
-                ></span
-              >
-            </label>
-            <button class="modal-btn btn" type="submit">Send</button>
           </div>
+          <label class="modal-form-agreement">
+            <input
+              class="modal-form-agreement-box"
+              type="checkbox"
+              name="user-agreement"
+              id="user-agreement"
+            />
+            <svg class="modal-form-agreement-icon" width="16" height="16">
+              <use
+                class="modal-form-agreement-unchecked"
+                href="./images/icons.svg#ui-unchecked"
+              ></use>
+              <use
+                class="modal-form-agreement-checked"
+                href="./images/icons.svg#ui-checked"
+              ></use>
+            </svg>
+            <span class="modal-form-agreement-text"
+              >I accept the terms and conditions of the
+              <a class="modal-form-agreement-link" href=""
+                >Privacy Policy</a
+              ></span
+            >
+          </label>
+          <button class="modal-btn btn" type="submit">Send</button>
         </form>
       </div>
     </div>
