--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
         </button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form" name="signup_form" autocomplete="on">
-          <div class="modal-form-wrap">
+          <div class="modal-form-wrap-field">
             <label class="modal-form-label" for="user-name">Name</label>
             <div class="modal-form-field">
               <input
@@ -632,7 +632,7 @@
               </svg>
             </div>
           </div>
-          <div class="modal-form-wrap">
+          <div class="modal-form-wrap-field">
             <label class="modal-form-label" for="user-phone">Phone</label>
             <div class="modal-form-field">
               <input
@@ -649,7 +649,7 @@
               </svg>
             </div>
           </div>
-          <div class="modal-form-wrap">
+          <div class="modal-form-wrap-field">
             <label class="modal-form-label" for="user-email">Email</label>
             <div class="modal-form-field">
               <input
@@ -666,7 +666,7 @@
               </svg>
             </div>
           </div>
-          <div class="modal-form-wrap">
+          <div class="modal-form-wrap-comm">
             <label class="modal-form-label" for="user-comment">Comment</label>
             <textarea
               class="modal-form-message"
@@ -676,30 +676,32 @@
               placeholder="Text input"
             ></textarea>
           </div>
-          <label class="modal-form-agreement">
-            <input
-              class="modal-form-agreement-box"
-              type="checkbox"
-              name="user-agreement"
-              id="user-agreement"
-            />
-            <svg class="modal-form-agreement-icon" width="16" height="16">
-              <use
-                class="modal-form-agreement-unchecked"
-                href="./images/icons.svg#ui-unchecked"
-              ></use>
-              <use
-                class="modal-form-agreement-checked"
-                href="./images/icons.svg#ui-checked"
-              ></use>
-            </svg>
-            <span class="modal-form-agreement-text"
-              >I accept the terms and conditions of the
-              <a class="modal-form-agreement-link" href=""
-                >Privacy Policy</a
-              ></span
-            >
-          </label>
+          <div class="modal-form-wrap-chec">
+            <label class="modal-form-agreement">
+              <input
+                class="modal-form-agreement-box"
+                type="checkbox"
+                name="user-agreement"
+                id="user-agreement"
+              />
+              <svg class="modal-form-agreement-icon" width="16" height="16">
+                <use
+                  class="modal-form-agreement-unchecked"
+                  href="./images/icons.svg#ui-unchecked"
+                ></use>
+                <use
+                  class="modal-form-agreement-checked"
+                  href="./images/icons.svg#ui-checked"
+                ></use>
+              </svg>
+              <span class="modal-form-agreement-text"
+                >I accept the terms and conditions of the
+                <a class="modal-form-agreement-link" href=""
+                  >Privacy Policy</a
+                ></span
+              >
+            </label>
+          </div>
           <button class="modal-btn btn" type="submit">Send</button>
         </form>
       </div>
