--- a/index.html
+++ b/index.html
@@ -677,29 +677,21 @@
             ></textarea>
           </div>
           <div class="modal-form-wrap-chec">
-            <label class="modal-form-agreement">
-              <input
-                class="modal-form-agreement-box"
-                type="checkbox"
-                name="user-agreement"
-                id="user-agreement"
-              />
-              <svg class="modal-form-agreement-icon" width="16" height="16">
-                <use
-                  class="modal-form-agreement-unchecked"
-                  href="./images/icons.svg#ui-unchecked"
-                ></use>
-                <use
-                  class="modal-form-agreement-checked"
-                  href="./images/icons.svg#ui-checked"
-                ></use>
-              </svg>
-              <span class="modal-form-agreement-text"
-                >I accept the terms and conditions of the
-                <a class="modal-form-agreement-link" href=""
-                  >Privacy Policy</a
-                ></span
-              >
+            <input
+              class="modal-form-agreement-box visually-hidden"
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
+            />
+            <label class="modal-form-agreement-label" for="user-privacy"
+              >I accept the terms and conditions of the
+              <span class="modal-form-agreement-box-vis">
+                <svg class="modal-form-agreement-icon" width="10" height="8">
+                  <use href="./images/icons.svg#ui-check"></use>
+                </svg>
+              </span>
+              <a class="modal-form-agreement-link" href="">Privacy Policy</a>
             </label>
           </div>
           <button class="modal-btn btn" type="submit">Send</button>
