--- a/index.html
+++ b/index.html
@@ -685,12 +685,12 @@
               value="true"
             />
             <label class="modal-form-agreement-label" for="user-privacy"
-              >I accept the terms and conditions of the
-              <span class="modal-form-agreement-box-vis">
+              ><span class="modal-form-agreement-box-vis">
                 <svg class="modal-form-agreement-icon" width="10" height="8">
                   <use href="./images/icons.svg#ui-check"></use>
-                </svg>
-              </span>
+                </svg> </span
+              >I accept the terms and conditions of the
+
               <a class="modal-form-agreement-link" href="">Privacy Policy</a>
             </label>
           </div>
